Fix incorrect shelf fungus rendertype